[gd_scene load_steps=4 format=3 uid="uid://b58oyq1o5ha2o"]

[ext_resource type="Script" uid="uid://bsqw6ncm8bgdj" path="res://models/explosive/projectile_explosive.gd" id="1_e1yt5"]

[sub_resource type="Gradient" id="Gradient_b08fd"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_nsg8a"]
gradient = SubResource("Gradient_b08fd")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)

[node name="ProjectileExplosive" type="RigidBody2D"]
gravity_scale = 0.0
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_e1yt5")
metadata/_edit_vertical_guides_ = [10.0]

[node name="TriangleLight" type="Polygon2D" parent="."]
position = Vector2(-12, 2)
color = Color(1, 0, 0.894118, 1)
polygon = PackedVector2Array(12, -6, 22, -7, 29, -2, 12, -2)

[node name="TriangleDark" type="Polygon2D" parent="."]
position = Vector2(-12, 2)
color = Color(0.733333, 0, 0.654902, 1)
polygon = PackedVector2Array(12, -2, 29, -2, 22, 3, 12, 2)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PackedVector2Array(10, -5, 17, 0, 10, 5, 0, 4, 0, -4)

[node name="PointLight2D" type="PointLight2D" parent="."]
z_index = 500
z_as_relative = false
energy = 3.0
shadow_enabled = true
texture = SubResource("GradientTexture2D_nsg8a")
texture_scale = 1.5
